--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,9 @@
                 </a>
               {%- endif -%}
               </li>
-              {%- if site.email -%}
+              {%- if site.discord -%}
               <li>
-              <a class="u-email black-link" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+              <a class="u-email black-link" href="http://discord.gg/{{ site.discord | cgi_escape | escape }}">discord.gg/{{ site.discord | cgi_escape | escape }}</a></li>
               {%- endif -%}
           </ul>
         </div>
