--- a/_includes/social.html
+++ b/_includes/social.html
@@ -13,7 +13,11 @@
   <li>
     <a class="black-link" href="https://discord.gg/{{ social.discord | cgi_escape | escape }}">[Discord]</a>
   </li>
-  {%- endif -%} {%- if social.facebook -%}
+  {%- endif -%} {%- if social.reddit -%}
+  <li>
+    <a class="black-link" href="https://reddit.com/{{ social.reddit | cgi_escape | escape }}"</a>[Reddit]</a>
+  </li>
+  {%- endif -%}{%- if social.facebook -%}
   <li>
     <a
       class="black-link"
